[web] 1. Font size fix on small screen 2. Breadcrumb alignment fix on long text 3. Video player location fix for portrait mode

--- a/web/src/layout.scss
+++ b/web/src/layout.scss
@@ -14,8 +14,15 @@ $highlight: #9692ff;
 $border: #f7f7ff;
 $error: rgb(255, 121, 198);
 
+$mobile: 844px;
+$portrait: 750px;
+
 :root {
     font-size: 16px;
+
+    @media (max-width: $mobile) {
+        font-size: 12px;
+    }
 }
 
 body {
@@ -54,8 +61,10 @@ body {
         .nav {
             list-style: none;
             display: flex;
-            align-items: center;
+            flex-wrap: wrap;
+            justify-content: center;
             font-size: 1.2rem;
+            line-height: 1.5;
 
             li {
                 margin-right: 15px;
@@ -102,7 +111,12 @@ body {
 
             img {
                 width: 300px;
-                height: 169px;
+                height: 170px;
+
+                @media (max-width: $mobile) {
+                    width: 150px;
+                    height: 85px;
+                }
             }
         }
 
@@ -209,6 +223,14 @@ body {
 
             .videoPlayer {
                 flex: 3;
+            }
+
+            @media (max-width: $portrait) {
+                flex-direction: column;
+
+                .videoPlayer {
+                    width: 100%;
+                }
             }
         }
     }
